<resources>
    <string name="app_name">Pulse App</string>

    <string name="start">START</string>
    <string name="stop">STOP</string>

    <string name="increase_pulse_intensity">+</string>
    <string name="decrease_pulse_intensity">-</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>

    <string name="intensity_is_not_supported">Intensity isn\'t supported</string>
</resources>